# ratemyprof

./: .gitignore  ADMIN_PANEL_FIXES.md  CLEANUP_PLAN.md  DATABASE_SCHEMA.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_NEXT_STEPS.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  GITHUB_PAGES_SETUP.md  MODERATION_SYSTEM.md  QUICK_REFERENCE.md  RAILWAY_SETUP.md  README.md  RLS_DEPLOYMENT_GUIDE.md  USER_DETAILS_MODAL_REDESIGN.md  check_college_fk.py  check_prof_count.py  check_professor_rls.py  check_professor_verification.py  check_user_reviews.py  check_vu_reviews.py  debug_auth_console.js  deploy-fixes.ps1  disable_rls.sql  fix_college_reviews_fk.sql  fix_professor_insert_policy.sql  fix_rls_policies.sql  fix_voting_rls.sql  railway.json  start-dev.bat  start-dev.ps1  supabase_schema.sql  test_api_with_token.py  test_college_join.py  test_import.py
backend/: .env.example  RLS_MIGRATION_GUIDE.md  SUPABASE_SCHEMA_REFERENCE.sql  check_colleges.py  check_db_structure.py  check_id_consistency.py  check_mapping_table.py  check_professors.py  check_review_id.py  check_specific_prof.py  create_college_review_mappings.py  department_updates.csv  fix_duplicate_ids.py  pyproject.toml  requirements.txt  test_review_flow.py  test_review_submit.py
backend/scripts/: CHECK_REVIEWS_SCHEMA.sql  CLEAN_POLICY_RECREATION.sql  DEBUG_INSERT_FAILURE.sql  DIAGNOSE_RLS_COMPLETE.sql  DISABLE_RLS_FOR_NOW.sql  DISABLE_RLS_TEMPORARILY.sql  FINAL_FIX_ALL_ISSUES.sql  FINAL_FIX_FLAG_REVIEW.sql  FINAL_INSERT_POLICY_FIX.sql  FINAL_RLS_FIX_WITH_FORCE.sql  FIX_DUPLICATE_INSERT_POLICIES.sql  FIX_MAPPINGS_RLS.sql  FIX_REVIEWS_RLS_FINAL.sql  FIX_RLS_WITH_ANON_KEY.sql  NUCLEAR_DIAGNOSTIC.sql  QUICK_FIX_RLS.sql  SIMPLIFY_ANON_POLICY.sql  TEMP_DISABLE_RLS.sql  add_college_review_voting.sql  add_college_reviews_table.sql  add_delete_rls_policy.sql  add_is_verified_column.sql  add_moderation_columns.sql  add_voting_and_moderation_tables.sql  check_constraints.sql  check_current_policies.sql  check_exact_policy.sql  check_moderation_columns.sql  clear_all_votes.sql  complete_dept_update.py  comprehensive_database_fix.sql  create_supabase_schema.sql  diagnose_and_fix_ratings.sql  diagnose_college_review_votes.sql  diagnose_college_reviews.sql  diagnose_flags_and_votes.sql  diagnose_professors_rls.sql  fix_all_professor_ratings.py  (+14 more)
backend/src/: __init__.py  (+1 more)
(+134 files in other folders)
